--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -5,3 +5,40 @@
     clear: both;
   }
 }
+
+/*************************************/
+/*media queries */
+/*
+    0px-600px==>phone
+    600px-900px==>tablet portrait (tab-port)
+    900px-1200px==>tablet landscape (tab-land)
+    1200px-1800px==> desktop
+    1800px+ ==> big ass desktop (big-desktop)
+*/
+/************************************/
+
+@mixin respond($breakpoint) {
+  @if $breakpoint==phone {
+    @media (max-width: 37.5em) /*600px*/ {
+      @content;
+    }
+  }
+
+  @if $breakpoint==tab-port {
+    @media (max-width: 56.25em) /*900px*/ {
+      @content;
+    }
+  }
+
+  @if $breakpoint==tab-land {
+    @media (max-width: 75em) /*1200px*/ {
+      @content;
+    }
+  }
+
+  @if $breakpoint==big-desktop {
+    @media (min-width: 112.5em) /*1800px*/ {
+      @content;
+    }
+  }
+}
