--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,7 +11,27 @@
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 62.5%; // 1rem = 10px ==> 10/16=62.5%
+
+  @include respond(tab-land) {
+    // ?width<1200
+    font-size: 56.25%; // 1rem = 9px ==>9/16=56.25%
+  }
+
+  @include respond(tab-port) {
+    // ?width<900
+    font-size: 50%; // 1rem = 8px ==>8/16=50%
+  }
+
+  @include respond(phone) {
+    // ?width<600
+    font-size: 50%; // 1rem = 8px ==>8/16=50%
+  }
+
+  @include respond(big-desktop) {
+    // ?width>1800
+    font-size: 75%; // 1rem = 12px ==> 12/16=75%
+  }
 }
 
 body {
@@ -26,4 +46,9 @@ body {
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 1.7;
+  overflow-x: hidden;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
