--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -9,6 +9,11 @@
     font-weight: 400;
     letter-spacing: 3.5rem;
     animation: moveInLeft 1s linear;
+
+    @include respond(phone) {
+      font-size: 5rem;
+      letter-spacing: 2rem;
+    }
   }
 
   &--sub {
@@ -17,6 +22,11 @@
     font-weight: 700;
     letter-spacing: 1.6rem;
     animation: moveInRight 1s linear;
+
+    @include respond(phone) {
+      font-size: 1.6rem;
+      letter-spacing: 1rem;
+    }
   }
 }
 
@@ -36,6 +46,13 @@
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     filter: drop-shadow(3rem 1rem 0.4rem rgba(#000, 0.2));
     // text-shadow: 0.5rem 1rem 2rem rgba(#000, 0.2);
+  }
+
+  @include respond(tab-port) {
+    font-size: 2.5rem;
+  }
+  @include respond(tab-port) {
+    font-size: 2rem;
   }
 }
 
