--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -19,16 +19,38 @@
       position: absolute;
       top: -2rem;
       left: 0;
+      @include respond(tab-port) {
+        top: 1rem;
+        left: 4rem;
+        transform: scale(1.1);
+      }
     }
     &--p2 {
       position: absolute;
       top: 2rem;
       right: 0;
+      @include respond(tab-port) {
+        top: 0;
+        left: -4rem;
+        transform: scale(1.2);
+      }
     }
     &--p3 {
       position: absolute;
       top: 10rem;
       right: 20%;
+      @include respond(tab-port) {
+        top: -1.5rem;
+        left: -8rem;
+        transform: scale(1.3);
+      }
+    }
+
+    @include respond(tab-port) {
+      margin-top: 3rem;
+      float: left;
+      width: 33.333333%;
+      position: relative;
     }
   }
   &:hover &__photo:not(:hover) {
