--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -1,5 +1,3 @@
-
-
 .story {
   background-color: rgba(#f7f7f7, 0.6);
   color: #222;
@@ -11,10 +9,21 @@
 
   transform: skewX(-12deg);
 
+  @include respond(tab-port) {
+    width: 90%;
+    padding: 3rem;
+    margin: 0 auto;
+  }
+
+  @include respond(phone) {
+    transform: skewX(0deg);
+  }
+
   &__shape {
     float: left;
     width: 15rem;
     height: 15rem;
+    margin-right: 2rem;
 
     border-radius: 50%;
     clip-path: circle(50% at 50% 50%);
@@ -32,10 +41,16 @@
       backface-visibility: hidden;
       transition: all 0.3s ease-in-out;
     }
+    @include respond(phone) {
+      transform: translateX(-1rem) skewX(0deg);
+    }
   }
 
   &__text {
     transform: skewX(12deg);
+    @include respond(phone) {
+      transform: skewX(0deg);
+    }
   }
 
   &__caption {
