--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,13 +4,25 @@
   font-size: 1.4rem;
   color: #f2f2f2;
 
+  @include respond(tab-port) {
+    padding: 1rem 2rem;
+  }
+
   &__container {
+    // background-color: #fff;
     width: 80%;
     margin: 0 auto;
+    @include respond(tab-port) {
+      width: 100%;
+    }
   }
+
   &__logo-box {
     margin-bottom: 8rem;
     text-align: center;
+    @include respond(tab-port) {
+      margin-bottom: 4rem;
+    }
   }
 
   &__logo {
@@ -20,12 +32,17 @@
 
   &__navigation {
     display: inline-block;
-    border-top: 2px solid #ccc;
     padding-top: 1rem;
+    border-top: 2px solid #ccc;
+    @include respond(tab-port) {
+      width: 100%;
+      text-align: center;
+    }
   }
 
   &__list {
     list-style-type: none;
+    // background-color: red;
   }
 
   &__item {
@@ -55,12 +72,17 @@
     }
   }
   &__copyright {
+    // background-color: rgb(221, 25, 25);
     color: #f2f2f2;
-    display: inline-block;
+    display: block;
     border-top: 2px solid #ccc;
-    padding-top: 1rem;
-    width: 80%;
-    margin: 0 auto;
+    padding: 1rem 2rem 0 2rem;
     float: right;
+
+    @include respond(tab-port) {
+      width: 100%;
+      text-align: center;
+      float: none;
+    }
   }
 }
