--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -6,15 +6,18 @@
   margin: 0 auto;
 }
 .row {
-  // background-color: rgba(216, 216, 215, 0.473);
-  width: 95%;
+  // background-color: rgba(204, 204, 25, 0.473);
+  max-width: 95%;
   height: max-content;
-  padding: 5rem 1rem;
+  padding: 5rem 2rem;
   margin: 0 auto;
 
-  // &:not(:last-child) {
-  //   margin-bottom: $gutter-vertical;
-  // }
+  @include respond(tab-port) {
+    max-width: 98%;
+    padding: 3rem 2rem;
+    margin: 0 auto;
+    margin-bottom: 5rem;
+  }
 
   @include clearfix;
   [class^='col-'] {
@@ -22,6 +25,17 @@
     padding: 1rem;
     &:not(:last-child) {
       margin-right: $gutter-horizontal;
+    }
+
+    @include respond(tab-port) {
+      float: none;
+      width: 100% !important;
+      margin: 1rem auto;
+
+      &:not(:last-child) {
+        margin-right: 0;
+        margin-bottom: 6rem;
+      }
     }
   }
 
