--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -12,6 +12,10 @@
     background-image: radial-gradient($Medium-green-100, $Dark-green-100);
     transform: scale(1);
     transition: all 0.8s ease-in;
+
+    @include respond(tab-port) {
+      top: 2.5rem;
+    }
   }
 
   &__button {
@@ -27,6 +31,9 @@
     z-index: 100;
 
     text-align: center;
+    @include respond(tab-port) {
+      top: 2rem;
+    }
   }
 
   &__checkbox {
@@ -37,11 +44,20 @@
     top: 7rem;
     right: 7rem;
     z-index: 200;
+
+    @include respond(tab-port) {
+      top: 2rem;
+    }
   }
 
   &__icon {
     top: 9.5rem;
     right: 8rem;
+    position: relative;
+
+    @include respond(tab-port) {
+      top: 5.5rem;
+    }
 
     &,
     &::before,
@@ -49,20 +65,22 @@
       display: inline-block;
       background-color: #520202;
       width: 3rem;
-      height: 2px;
+      height: 3px;
       position: fixed;
       transition: all 0.1s ease-in-out;
     }
 
     &::before {
       content: '';
-      top: 8.8rem;
-      right: 8rem;
+      position: absolute;
+      top: -1rem;
+      right: 0;
     }
     &::after {
       content: '';
-      top: 10.2rem;
-      right: 8rem;
+      position: absolute;
+      top: 1rem;
+      right: 0;
     }
   }
 
@@ -136,15 +154,15 @@
       content: '';
       background-color: blue;
       transform: rotateZ(-45deg);
-      top: 9.5rem;
-      right: 8rem;
+      top: 0rem;
+      right: 0;
     }
     &::after {
       content: '';
       background-color: blue;
       transform: rotateZ(45deg);
-      top: 9.5rem;
-      right: 8rem;
+      top: 0rem;
+      right: 0;
     }
   }
 }
