--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -2,11 +2,14 @@
   background-color: $bg-color;
   padding: 25rem 0;
   margin-top: -20vh;
+  @include respond(tab-port) {
+    padding: 20rem 0;
+  }
 }
 
 .section-features {
   width: 100%;
-  height: 95vh;
+  // height: 95vh;
   padding: 15rem 0;
   background-image: linear-gradient(
       45deg,
@@ -23,12 +26,25 @@
   & > * {
     transform: skewY(7deg);
   }
+  @include respond(tab-port) {
+    padding: 5rem 0;
+    transform: skewY(-2deg) translateY(-10rem);
+
+    & > * {
+      transform: skewY(2deg);
+    }
+  }
 }
 
 .section-tours {
   background-color: $bg-color;
-  padding: 15rem 0 4rem 0;
+  padding: 25rem 0 4rem 0;
   margin-top: -30vh;
+
+  @include respond(tab-land) {
+    margin-top: -20vh;
+    padding-bottom: 2rem;
+  }
 }
 
 .section-stories {
@@ -48,7 +64,7 @@
   );
 
   max-width: 100%;
-  height: 95vh;
-  padding: 2rem;
+  height: 70vh;
+  padding: 5rem;
   position: relative;
 }
